force-app/main/default/objects/Campaign_Invoice__c/Campaign_Invoice__c.object-meta.xml
<CustomObject>
    <description>Tracks invoices for audience marketing campaigns.</description>
    <label>Campaign Invoice</label>
    <nameField>
        <displayFormat>INV-{0000}</displayFormat>
        <label>Campaign Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>