force-app/main/default/objects/Campaign_Invoice__c/fields/Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount__c</fullName>
    <description>Amount billed on this invoice.</description>
    <inlineHelpText>Amount billed on this invoice.</inlineHelpText>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>