force-app/main/default/objects/Campaign_Invoice__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description
  >The invoice number of an outside vendor that corresponds to the cost of running this campaign.</description>
    <inlineHelpText
  >The invoice number of an outside vendor that corresponds to the cost of running this campaign.</inlineHelpText>
    <label>Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>