force-app/main/default/objects/Campaign_Invoice__c/fields/Invoice_Qty__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Qty__c</fullName>
    <description>Total number of orders on the invoice.</description>
    <inlineHelpText>Total number of orders on the invoice.</inlineHelpText>
    <label>Invoice Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>