force-app/main/default/objects/Campaign_Invoice__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description
  >e.Republic PO Number for approval of payment of this invoice.</description>
    <inlineHelpText
  >e.Republic PO Number for approval of payment of this invoice.</inlineHelpText>
    <label>PO Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>