force-app/main/default/objects/Campaign_Invoice__c/fields/Purchase_Order_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Created_Date__c</fullName>
    <formula>Purchase_Order__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Created Date</label>
    <type>Date</type>
</CustomField>