force-app/main/default/objects/Campaign_Invoice__c/fields/Purchase_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Status__c</fullName>
    <formula>TEXT(Purchase_Order__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order Status</label>
    <type>Text</type>
</CustomField>